fix(urlcolor): fix markdown navigator urls color in dark mode

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,5 +1,7 @@
 @import '~@angular/material/theming';
 @import '~@covalent/core/theming/all-theme';
+@import '~@covalent/markdown/markdown-theme';
+
 // Plus imports for other components in your app.
 
 // Include the base styles for Angular Material core. We include this here so that you only
@@ -41,6 +43,7 @@ $theme: mat-light-theme($primary, $accent, $warn);
 @include covalent-theme($theme);
 // Include Teradata brand
 @include teradata-brand($theme);
+@include covalent-markdown-theme($theme);
 
 /* ------------------------------------- DARK THEME ------------------------------------------ */
 
@@ -55,4 +58,5 @@ $theme: mat-light-theme($primary, $accent, $warn);
   @include covalent-theme($dark-theme);
   // Include Teradata brand
   @include teradata-brand($dark-theme);
+  @include covalent-markdown-theme($theme);
 }
